--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="col-md-5 text-start">
                     <!-- Ilustrasi lainnya, cek di https://storyset.com/ (Gratis!) -->
-                    <img src="../web/aset/Contact us-bro.png" alt="Ilustrasi" class="img-fluid">
+                    <img src="/web/aset/Contact us-bro.png" alt="Ilustrasi" class="img-fluid">
                 </div>
             </div>
         </div>
