--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class=" text-md-start text-center">
                             <h1><b>Fachry</b> Dwi Zakaria</h1>
                             <h5 class="text-secondary">
-                                <b>networking engineer</b> at
+                                <b>Networking Engineer</b> at
                                 <a href="https://www.imedianet.id/" class="text-decoration-none text-primary-emphasis" target="_blank">PT Ikhlas Cipta Teknologi</a>
                             </h5>
                         </div>
@@ -83,12 +83,12 @@
                                 <div class="card-body">
                                     <span class="badge bg-primary">2023 - sekarang</span>
                                     <h5 class="mt-2 mb-0">Politeknik Negeri Banyuwangi</h5>
-                                    <p class="text-body-tertiary mb-0">Teknologi Rekayasa Perangkat Lunak | IPK. On Going</p>
+                                    <p class="text-body-tertiary mb-0">Teknologi Rekayasa Perangkat Lunak | IPK. 3,71</p>
 
                                     <div class="mt-2">
-                                        <p class="mb-1">Mata Kuliah yang saya ikuti : </p>
+                                        <p class="mb-1">Mata Kuliah yang Saya Ikuti : </p>
                                         <span class="badge text-bg-light">Basis Data</span>
-                                        <span class="badge text-bg-light">pemrograman web dasar</span>
+                                        <span class="badge text-bg-light">Pemrograman Web Dasar</span>
                                         <span class="badge text-bg-light">Struktur Data</span>
                                     </div>
                                 </div>
@@ -112,8 +112,8 @@
 
                                     <div class="mt-2">
                                         <ul class="mb-0">
-                                            <li>ability to use mikrotik</li>
-                                            <li>expert in network analysis</li>
+                                            <li>Ability to use mikrotik</li>
+                                            <li>Expert in network analysis</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -124,11 +124,11 @@
                                 <div class="card-body">
                                     <span class="badge bg-secondary">2023 - 2024</span>
                                     <h5 class="mt-2 mb-0"><b>CV. Web Media Solusi Digital</b></h5>
-                                    <p class="text-body-tertiary mb-0">frontend Development</p>
+                                    <p class="text-body-tertiary mb-0">Frontend Development</p>
                                     <hr class="mt-2 mb-3 text-body-tertiary">
 
                                     <div class="mt-2">
-                                        <p class="mb-0"> ability to master javascript, sql,
+                                        <p class="mb-0"> Ability to master javascript, sql,
                                             html and css programming
                                             languages</p>
                                     </div>
@@ -152,11 +152,11 @@
                     <!-- Keahlian atau skill yang kamu bisa atau kuasai -->
 
                     <a class="btn btn-primary text-bg-light text-start mb-2 me-1">
-                        network engineer (Mikrotik,MTCNA,CCNA,VCIE,VTSP)
+                        Network Engineer (Mikrotik,MTCNA,CCNA,VCIE,VTSP)
                     </a>
                     <a class="btn btn-primary text-bg-light text-start mb-2 me-1">
-                        proficiency in photography and
- videography
+                        Proficiency in Photography and
+ Videography
                     </a>
                     <a class="btn btn-primary text-bg-light text-start mb-2 me-1">
                         Microsoft Office (Word, Excel, Powerpoint)
@@ -198,7 +198,7 @@
                         UI/UX Design
                     </a>
                     <a class="btn btn-success text-bg-light text-start mb-2 me-1">
-                        videography
+                        Videography
                     </a>
                 </div>
             </div>
