--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <div class="card-body">
                                     <span class="badge bg-secondary">2016 - Sekarang</span>
                                     <h5 class="mt-2 mb-0"><b>PT Ikhlas Cipta Teknologi</b></h5>
-                                    <p class="text-body-tertiary mb-0">networking Engineer</p>
+                                    <p class="text-body-tertiary mb-0">Networking Engineer</p>
                                     <hr class="mt-2 mb-3 text-body-tertiary">
 
                                     <div class="mt-2">
