--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 mb-5 mb-md-0">
-                    <img src="/aset/IMG_7667 - Copy.JPG" alt="F R Y" class="img-fluid rounded-4 shadow-lg">
+                    <img src="/aset/wa.jpg" alt="F R Y" class="img-fluid rounded-4 shadow-lg">
                 </div>
                 <div class="col-md-9 mt-md-5">
                     <div class="ms-md-4 pt-md-5">
